# escw-example

./: Makefile  README.md
.cargo/: config.toml
escw-example-app/: Cargo.toml
escw-example-app/src/: io.rs  lib.rs  uart.rs
escw-example-stm32/: .gitignore  .mxproject  Makefile  cmsis-dap.cfg  escw-example-stm32.ioc
escw-example-stm32/Core/Inc/: stm32f4xx_it.h
escw-example-stm32/Core/Src/: gpio.c  main.c  stm32f4xx_it.c
escw-example-stm32/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_uart.h
